hamburger menu fixed top on mobile

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -116,10 +116,11 @@ header {
   }
 
   .hamburger {
-    color: white;
+    color: $beaver;
     font-weight: bolder;
     display: none;
-    zoom: 185%;
+    position: fixed;
+    right: 0;
   }
 }
 
